# job_search_application_with_data_base

./: .env_template  README.md  main.py  pyproject.toml
data/: data.json
src/: api.py  company.py  postgres_db.py  vacancy.py
tests/: conftest.py  test_company.py  test_vacancy.py
